fix: :bug: remove layout shift

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -4,7 +4,8 @@ select {
   appearance: none;
   width: 100%;
   border-radius: 0.5rem;
-  border: 1px solid var(--color-stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--color-stroke-default);
 
   padding: 0.75rem 1rem;
 
@@ -24,7 +25,7 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
   outline: 0.25rem solid var(--color-surface-secondary);
-  border: 0.125rem solid var(--color-stroke-highlight);
+  border-color: var(--color-stroke-highlight);
   outline-offset: 0.1px; /* para aparecer a borda no Safari */
 }
 
